Demos/NP/np-access-granted.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-access-granted
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: granted
