Demos/NP/np-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
